<resources>
    <string name="app_name">Spaces</string>
    <string name="s_p_a_c_e_s">S P A C E S</string>
    <string name="search_for_a_venue">Search for a venue</string>
    <string name="pilkington_library">Pilkington Library</string>
    <string name="_224_seats_available">224 seats available</string>
    <string name="venueimage">VenueImage</string>
    <string name="logo">logo</string>
    <string name="welcome_to_spaces_which_of_these_venues_would_you_like_to_book">Welcome to Spaces! Which of these venues would you like to book?</string>
    <string name="todo">TODO</string>
    <string name="profileicon">profileicon</string>
    <string name="homeicon">homeicon</string>
    <string name="welcome_to_your_profile_these_are_your_bookings">Welcome to your profile! These are your bookings!</string>
</resources>