<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#161616"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/spaceslogo" />

    <TextView
        android:id="@+id/logoLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/s_p_a_c_e_s"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/venueSectionHeader"
        android:layout_width="376dp"
        android:layout_height="64dp"
        android:layout_marginTop="144dp"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/welcome_to_spaces_which_of_these_venues_would_you_like_to_book"
        android:textAlignment="center"
        android:textColor="#00FFC9"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/venuesSection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="85dp"
        android:layout_marginTop="230dp"
        android:layout_marginBottom="125dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/venueSectionHeader"
        app:layout_constraintVertical_bias="1.0">


        <ListView
            android:id="@+id/venuesList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:divider="@null"
            android:scrollbars="vertical">

        </ListView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/appControls"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="690dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="411dp">


        <ImageButton
            android:id="@+id/infoBtn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/info"
            android:contentDescription="@string/todo" />

        <ImageButton
            android:id="@+id/homeBtn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/homeicon"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/homeactive" />

        <ImageButton
            android:id="@+id/profileBtn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/profileicon"
            android:scaleType="fitCenter"
            android:visibility="visible"
            app:srcCompat="@drawable/user" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>